Fixed bug #81298

Creation of the filter may fail for some special encodings, for
which detection is not supported.